2002-11-26  Mo DeJong  <mdejong@uncounted.org>

	* patches/libgui_print.patch: Add patch
	for libgui that fixes Win32 printing crash.

2002-11-26  Mo DeJong  <mdejong@uncounted.org>

	* gui/editorpane.tcl (print_file): Don't
	attempt to delete a printer dialog object
	if it does not exist. This fixes a problem
	printing the grep pane under Windows.
	* gui/winprint.tcl: Resurrect windows
	printing file that was erroneously removed
	on 2000-05-26. These methods are used
	by the utilities.tcl file.

2002-11-25  Mo DeJong  <mdejong@uncounted.org>

	* Makefile.am: Ignore doc subdir.
	* Makefile.in: Regen.
	* README.TXT: Mention sourceforge URL
 	for online docs.
	* configure: Regen.
	* configure.in: Don't generate Makefiles
	in doc subdir.
	* mkdist.sh: Don't copy doc subdir.
	* gui/multiview.tcl (AddHelpMenu):
	Open sourceforge online docs. The
	existing documentation is corrupted
	so leave them out of the distribution.

2002-11-25  Mo DeJong  <mdejong@uncounted.org>

	* gui/retriever.tcl (destructor, window_deleted):
	Fixup window deletion by setting the window
	var to "" when it is deleted by the user.

2002-11-24  Mo DeJong  <mdejong@uncounted.org>

	* configure: Regen.
	* configure.in:
	* mkdist.sh: Update version number
	to 5.1.2.

2002-11-24  Mo DeJong  <mdejong@uncounted.org>

	* gui/multiview.tcl (toolbar_post_scope_menu):
	Fix state of Related, All, All, and None buttons
	inside the symbol combo to match the comments
	and the documentation.
	* gui/xrefpane.tcl (fill): Use variables
	prefixed by $itk_option(-symbols_filter) not
	$itk_option(-symbols) when setting values
	for the combobox. This fixes symbol filtering
	while the xref tab is active.

2002-11-20  Mo DeJong  <mdejong@uncounted.org>

	* INSTALL.TXT: Inform users that GNU tools
	are required to build Source-Navigator.
	* configure: Regen.
	* configure.in: Require GNU flex and
	bison when building.
	* hyper/Makefile.am: Remove generated
	.c files as a results of 'make clean'.